--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "pokemon-api",
   "version": "1.0.0",
-  "main": "myscripts.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
